• Updated both forms to use alternate input for Move In Date for mobile screens (in order to trigger native Date Picker in iOS and Android...much better than the current plugin); • Made the building search input visible to non-admins on city page; • Added event.preventDefault() to the 'View More' buttons of reviews

--- a/client/templates/city/city.styl
+++ b/client/templates/city/city.styl
@@ -356,13 +356,16 @@
     font-weight bold
     height 38px
     padding-left 32px
+    @media screen and (max-width: 767px)
+      max-width 95%
+      margin 0 auto
 
   i
     color #aaa
     position absolute
     top 12px
-    left 10px
-    font-size 90%
+    left 4.5%
+    font-size 96%
     opacity 0.9
     @media screen and (min-width: 768px)
       left 13px
